--- a/about.html
+++ b/about.html
@@ -10,35 +10,73 @@
 	<div class="container">
 		<!-- Start Header -->
 		<header>
-			<div id="logo"></div>
-			<div class="mainNav"></div>
+			<div id="logo">
+				<img src="images/AlexKeiths_Logo.svg">
+			</div>
+				<nav class="mainNav">
+				<ul>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="beer.html">BEER</a></li>
+					<li><a href="about.html">ABOUT US</a></li>
+					<li><a href="products.html">PRODUCTS</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
+				</ul>
+				<img src="images/wood-navBar.jpg">
+			</nav>
 		</header>
 		<!-- End Header -->
 		<!-- Start Main -->
 		<main>
 			<div class="aboutBox">
-				<section class="aboutText aboutTopText"></section>
-				<div class="aboutImage leftMargin aboutTop"></div>
+				<section class="aboutText aboutTopText">
+					<p>Born in 1793, John Keiths was schooled in Halifax, Nova Scotia, Canada during his early days. Later on he would find himself enlisted in the Canadian Royal Arms and was awarded with the prestigious medal of "Moderate Participation in Training Exercises" in 1810. During the famous War Of 1812, he assisted the legendary Major-General Sir Isaac Brock in the upper Canadian Regiment. During the war he became friends with Liam Alex, and then collectively founded Alex + Keiths, expressing their enthusiasm towards alcoholic beverages.</p>
+				</section>
+				<div class="aboutImage leftMargin aboutTop">
+					<img src="images/john-portrait.jpg" alt="John">
+				</div>
 				<div class="selectAboutImage">
-					<img class="aboutImageContainer leftAbout" data-offset="0" src="images/productImage-original.jpg">
+					<img class="aboutImageContainer leftAbout" data-offset="0" src="images/john-portrait.jpg">
 				</div>
 				<div class="selectAboutImage leftMargin3">
-					<img class="aboutImageContainer rightAbout" data-offset="1" src="images/productImage-light.jpg">
+					<img class="aboutImageContainer rightAbout" data-offset="1" src="images/liam-portrait.jpg">
 				</div>
 			</div>
 			<div class="aboutBox">
-				<div class="aboutImage aboutBot"></div>
-				<section class="aboutText leftMargin">
-					<p class="aboutInfo">About Info</p>
+				<div class="aboutImage aboutBot">
+					<img src="images/liam-portrait.jpg" alt="Liam">
+				</div>
+				<section class="aboutText leftMargin aboutTextLow">
+					<p class="aboutInfo">Born in 1791, Liam Alex was a carpenter who worked for a local construction business in Quebec in his early days and attended McGill University later on. In 1811 he graduated from the general business BA program and was enlisted in the Canadian Military Construction Unit. In the War Of 1812 he served under Major-General Sir Isaac Brock where he would build outposts and forts in mere hours providing positional advantage. During his time in the ranks he met John Keiths and later co-founded Alex + Keiths in 1820.</p>
 				</section>
 			</div>
 		</main>
 		<!-- End Main -->
 		<!-- Start Footer -->
 		<footer>
-			<div id="footLogo"></div>
-			<div class="footNav"></div>
-			<div id="socials"></div>
+			<div id="logo">
+				<img src="images/AlexKeiths_Logo.svg">
+			</div>
+				<nav class="footNav">
+				<ul>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="beer.html">BEER</a></li>
+					<li><a href="about.html">ABOUT US</a></li>
+					<li><a href="products.html">PRODUCTS</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
+				</ul>
+				<img src="images/wood-navBar.jpg">
+			</nav>
+			<div class="hidden" id="toTop">
+				<a href="about.html"><span id="topSpan">Back To Top</span></a>
+			</div>
+			<div id="socials">
+				<ul id="socials">
+					<li><a href="http://www.youtube.com"><img id="youtubeIcon" src="images/youtube.jpg" alt="Youtube"></a></li>
+					<li><a href="http://www.facebook.com"><img id="facebookIcon" src="images/facebook.jpg" alt="Facebook"></a></li>
+					<li><a href="http://www.twitter.com"><img id="twitterIcon" src="images/twitter.jpg" alt="Twitter"></a></li>
+					<li><a href="http://www.instagram.com"><img id="instagramIcon" src="images/instagram.jpg" alt="Instagram"></a></li>
+				</ul>
+			</div>
 		</footer>
 		<!-- End Footer -->
 	</div>
