--- a/beer.html
+++ b/beer.html
@@ -10,39 +10,80 @@
 	<div class="container">
 		<!-- Start Header -->
 		<header>
-			<div id="logo"></div>
-			<div class="mainNav"></div>
+			<div id="logo">
+				<img src="images/AlexKeiths_Logo.svg">
+			</div>
+				<nav class="mainNav">
+				<ul>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="beer.html">BEER</a></li>
+					<li><a href="about.html">ABOUT US</a></li>
+					<li><a href="products.html">PRODUCTS</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
+				</ul>
+				<img src="images/wood-navBar.jpg">
+			</nav>
 		</header>
 		<!-- End Header -->
 		<!-- Start Main -->
 		<main>
 			<div class="beerBox">
-				<section class="beerImage topBeer"></section>
+				<div class="beerImage topBeer">
+					<img src="images/beer-bottles.jpg" alt="Beer Bottles">
+				</div>
 				<div class="beerText leftMargin2 topBeer">
-					<p class="textMain">Main Text</p>
-					<p class="textAlt hidden">Alt Text</p>
+					<p class="textMain">"With each bottle of Alex + Keiths, we put immense care into the user experience, tailoring the flavours to be the perfect complement to relaxing after a hard day's work." - Randy Blevins (CEO)</p>
+					<p class="beerTextLow">Starting with the iconic Alex + Keiths bottle, we use the sand from the Halifax beaches that we later smelt down into to be molded. After the bottle is done, the cap is shipped in from Nunavut. Last but not least, the iconic taste of Alex + Keiths beer is the by-product of years of valuable feedback from you!</p>
+					<p class="textAlt hidden">Starting with the iconic Alex + Keiths bottle, we use the sand from the famous Halifax beaches that is later smelted down by skilled engineers into the glass material to be molded in a warehouse. After the bottle is done, the cap is shipped in from Nunavut. Last but not least, the iconic taste of Alex + Keiths beer is the by-product of years of valuable feedback from you!</p>
 					<div class="heroButtons selectedButton" id="beerButton1"></div>
 					<div class="heroButtons" id="beerButton2"></div>
 				</div>
 			</div>
 			<div class="beerBox">
-				<section class="beerImage"></section>
-				<div class="beerText leftMargin botBeer"></div>
+				<div class="beerImage">
+					<img src="images/bottle-belt.jpg" alt="Beer Belt">
+				</div>
+				<div class="beerText leftMargin botBeer">
+					<p>Starting with the iconic Alex + Keiths bottle, we use the sand from the famous Halifax beaches that is later smelted down by skilled engineers into the glass material to be molded in a warehouse. After the bottle is done, the cap is shipped in from Nunavut. Last but not least, the iconic taste of Alex + Keiths beer is the by-product of years of valuable feedback from you!</p>
+				</div>
 			</div>
 			<div class="beerImageBox">
 				<div class="beerImage2">
-					<img class="mainBeerImage" src="images/productImage-original.jpg">
-					<img class="altBeerImage hidden" src="images/productImage-light.jpg">
+					<img class="mainBeerImage" src="images/beer-bottles-table.jpg" alt="Beer Bottles">
+					<img class="altBeerImage hidden" src="images/bottle-belt-close.jpg" alt="Beer Belt">
 				</div>
-				<div class="beerImage2 leftMargin secondBeerImage"></div>
+				<div class="beerImage2 leftMargin secondBeerImage">
+					<img src="images/bottle-belt-close.jpg" alt="Beer Belt">
+				</div>
 			</div>
 		</main>
 		<!-- End Main -->
 		<!-- Start Footer -->
 		<footer>
-			<div id="footLogo"></div>
-			<div class="footNav"></div>
-			<div id="socials"></div>
+			<div id="logo">
+				<img src="images/AlexKeiths_Logo.svg">
+			</div>
+				<nav class="footNav">
+				<ul>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="beer.html">BEER</a></li>
+					<li><a href="about.html">ABOUT US</a></li>
+					<li><a href="products.html">PRODUCTS</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
+				</ul>
+				<img src="images/wood-navBar.jpg">
+			</nav>
+			<div class="hidden" id="toTop">
+				<a href="beer.html"><span id="topSpan">Back To Top</span></a>
+			</div>
+			<div id="socials">
+				<ul id="socials">
+					<li><a href="http://www.youtube.com"><img id="youtubeIcon" src="images/youtube.jpg" alt="Youtube"></a></li>
+					<li><a href="http://www.facebook.com"><img id="facebookIcon" src="images/facebook.jpg" alt="Facebook"></a></li>
+					<li><a href="http://www.twitter.com"><img id="twitterIcon" src="images/twitter.jpg" alt="Twitter"></a></li>
+					<li><a href="http://www.instagram.com"><img id="instagramIcon" src="images/instagram.jpg" alt="Instagram"></a></li>
+				</ul>
+			</div>
 		</footer>
 		<!-- End Footer -->
 	</div>
