--- a/index.html
+++ b/index.html
@@ -10,33 +10,65 @@
 	<div class="container">
 		<!-- Start Header -->
 		<header>
-			<div id="logo"></div>
-			<div class="mainNav"></div>
+			<div id="logo">
+				<img src="images/AlexKeiths_Logo.svg">
+			</div>
+				<nav class="mainNav">
+				<ul>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="beer.html">BEER</a></li>
+					<li><a href="about.html">ABOUT US</a></li>
+					<li><a href="products.html">PRODUCTS</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
+				</ul>
+				<img src="images/wood-navBar.jpg">
+			</nav>
 		</header>
 		<!-- End Header -->
 		<!-- Start Main -->
 		<main>
-			<div class="hero">
-				<img class="heroMain" src="images/productImage-original.jpg">
-				<img class="heroAlt hidden" src="images/productImage-light.jpg">
+			<div>
+				<iframe class="heroMain hero" src="https://www.youtube.com/embed/LTJmHX6k0kw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<img class="heroAlt hidden hero" src="images/home-mockup-large.jpg" alt="Mockup Image">
 				<div class="heroButtons selectedButton" id="hero1"></div>
 				<div class="heroButtons" id="hero2"></div>
 			</div>
 			<div class="homePromo">
 				<div class="promoImage">
-					<img src="images/home-mockup.jpg">
+					<img src="images/home-mockup.jpg" alt="Mockup Image">
 				</div>
 				<section class="promoText">
-					<p>Promo Text</p>
+					<p>Relaxing after a hard day's work? Or simply relaxing after you've done nothing at all? Our Alex + Keiths beer has been exquisitely crafted to be the perfect companion in any setting, during any occasion, and at any time. Please drink responsibly.</p>
 				</section>
 			</div>
 		</main>
 		<!-- End Main -->
 		<!-- Start Footer -->
 		<footer>
-			<div id="footLogo"></div>
-			<div class="footNav"></div>
-			<div id="socials"></div>
+			<div id="logo">
+				<img src="images/AlexKeiths_Logo.svg">
+			</div>
+				<nav class="footNav">
+				<ul>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="beer.html">BEER</a></li>
+					<li><a href="about.html">ABOUT US</a></li>
+					<li><a href="products.html">PRODUCTS</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
+				</ul>
+				<img src="images/wood-navBar.jpg">
+			</nav>
+			<div class="hidden" id="toTop">
+				<a href="index.html"><span id="topSpan">Back To Top</span></a>
+			</div>
+			<div id="socials">
+				<ul id="socials">
+					<li><a href="http://www.youtube.com"><img id="youtubeIcon" src="images/youtube.jpg" alt="Youtube"></a></li>
+					<li><a href="http://www.facebook.com"><img id="facebookIcon" src="images/facebook.jpg" alt="Facebook"></a></li>
+					<li><a href="http://www.twitter.com"><img id="twitterIcon" src="images/twitter.jpg" alt="Twitter"></a></li>
+					<li><a href="http://www.instagram.com"><img id="instagramIcon" src="images/instagram.jpg" alt="Instagram"></a></li>
+				</ul>
+			</div>
 		</footer>
 		<!-- End Footer -->
 	</div>
