--- a/products.html
+++ b/products.html
@@ -10,40 +10,74 @@
 	<div class="container">
 		<!-- Start Header -->
 		<header>
-			<div id="logo"></div>
-			<div class="mainNav"></div>
+			<div id="logo">
+				<img src="images/AlexKeiths_Logo.svg">
+			</div>
+				<nav class="mainNav">
+				<ul>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="beer.html">BEER</a></li>
+					<li><a href="about.html">ABOUT US</a></li>
+					<li><a href="products.html">PRODUCTS</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
+				</ul>
+				<img src="images/wood-navBar.jpg">
+			</nav>
 		</header>
 		<!-- End Header -->
 		<!-- Start Main -->
 		<main>
-			<div id="productBanner"></div>
+			<div id="productBanner">
+				<img src="images/products-banner.jpg" alt="productBanner">
+			</div>
 			<div class="productPromo">
-				<img src="" class="productPromoImage selectedProduct" id="original">
-				<img src="" class="productPromoImage" id="light">
-				<img src="" class="productPromoImage" id="spiced">
-				<img src="" class="productPromoImage" id="citrus">
+				<img src="images/pale-product.jpg" class="productPromoImage selectedProduct" id="original">
+				<img src="images/light-product.jpg" class="productPromoImage" id="light">
+				<img src="images/spiced-product.jpg" class="productPromoImage" id="spiced">
+				<img src="images/citrus-product.jpg" class="productPromoImage" id="citrus">
 			</div>
 			<div class="productInfo">
 				<div id="productDisplay">
-					<img id="displayOriginal" src="images/productImage-original.jpg">
-					<img class="hidden" id="displayLight" src="images/productImage-light.jpg">
-					<img class="hidden" id="displaySpiced" src="images/productImage-spiced.jpg">
-					<img class="hidden" id="displayCitrus" src="images/productImage-citrus.jpg">
+					<img id="displayOriginal" src="images/pale-display.jpg" alt="Pale Ale">
+					<img class="hidden" id="displayLight" src="images/light-display.jpg" alt="Light Ale">
+					<img class="hidden" id="displaySpiced" src="images/citrus-display.jpg" alt="Citrus Ale">
+					<img class="hidden" id="displayCitrus" src="images/spiced-display.jpg" alt="Spiced Ale">
 				</div>
 				<section class="productPromoText productText">
-					<p id="originalText">Original Product</p>
-					<p id="lightText" class="hidden">Light Product</p>
-					<p id="spicedText" class="hidden">Spiced Product</p>
-					<p id="citrusText" class="hidden">Citrus Product</p>
+					<p id="originalText">India Pale Ale is the classic Alex + Keiths taste. If you want to discover why this company is loved by connoisseurs far and wide, all you have to do is take a sip!</p>
+					<p id="lightText" class="hidden">Containing considerably less fat volume as other flavours, the goal of 'Light' beer is to bring our iconic taste to those who are more conscious about their health! CHFA Warning: Contains above average content of daily sodium.</p>
+					<p id="spicedText" class="hidden">With hints of rare spices such as cinnamon, parsley and ginger, what isn't there to love about this beer? Our boldest and brashest flavour yet!</p>
+					<p id="citrusText" class="hidden">Infused with tropical lime, lemon and orange citrus, this flavour was crafted specifically for a hot day. You're not one for the outdoors, don't worry. It's just as enjoyable indoors!</p>
 				</section>
 			</div>
 		</main>
 		<!-- End Main -->
 		<!-- Start Footer -->
 		<footer>
-			<div id="footLogo"></div>
-			<div class="footNav"></div>
-			<div id="socials"></div>
+			<div id="logo">
+				<img src="images/AlexKeiths_Logo.svg">
+			</div>
+				<nav class="footNav">
+				<ul>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="beer.html">BEER</a></li>
+					<li><a href="about.html">ABOUT US</a></li>
+					<li><a href="products.html">PRODUCTS</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
+				</ul>
+				<img src="images/wood-navBar.jpg">
+			</nav>
+			<div class="hidden" id="toTop">
+				<a href="products.html"><span id="topSpan">Back To Top</span></a>
+			</div>
+			<div id="socials">
+				<ul id="socials">
+					<li><a href="http://www.youtube.com"><img id="youtubeIcon" src="images/youtube.jpg" alt="Youtube"></a></li>
+					<li><a href="http://www.facebook.com"><img id="facebookIcon" src="images/facebook.jpg" alt="Facebook"></a></li>
+					<li><a href="http://www.twitter.com"><img id="twitterIcon" src="images/twitter.jpg" alt="Twitter"></a></li>
+					<li><a href="http://www.instagram.com"><img id="instagramIcon" src="images/instagram.jpg" alt="Instagram"></a></li>
+				</ul>
+			</div>
 		</footer>
 		<!-- End Footer -->
 	</div>
