--- a/contact.html
+++ b/contact.html
@@ -10,32 +10,110 @@
 	<div class="container">
 		<!-- Start Header -->
 		<header>
-			<div id="logo"></div>
-			<div class="mainNav"></div>
+			<div id="logo">
+				<img src="images/AlexKeiths_Logo.svg">
+			</div>
+				<nav class="mainNav">
+				<ul>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="beer.html">BEER</a></li>
+					<li><a href="about.html">ABOUT US</a></li>
+					<li><a href="products.html">PRODUCTS</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
+				</ul>
+				<img src="images/wood-navBar.jpg">
+			</nav>
 		</header>
 		<!-- End Header -->
 		<!-- Start Main -->
 		<main>
-			<div class="contactBanner"></div>
+			<div class="contactBanner">
+				<img src="images/contact-banner.jpg" alt="Contact Banner">
+			</div>
 			<div class="contactBox">
-				<section class="contactForm"></section>
+				<section class="contactForm">
+					<h2>Contact Us!</h2>
+					<form action="form.php" method="post">
+						<label for="name">First Name:</label><br>
+						<input type="text" required id="name" name="fullName" placeholder="Enter Your  First Name"><br><br>
+						<label for="name">Last Name:</label><br>
+						<input type="text" required id="name" name="fullName" placeholder="Enter Your Last Name"><br><br>
+						<label for="name">Phone Number:</label><br>
+						<input type="number" required id="phone" name="phoneNumber" placeholder="Enter Your Phone Number"><br><br>
+						<label for="email">Email:</label><br>
+						<input type="email" required id="email" placeholder="Enter Your Email"><br><br>
+						<label for="comments">Comments:</label><br>
+						<textarea name="comments" id="comments"  placeholder="Leave Additional Comments Here"></textarea><br><br>
+						<div class="formButtons">
+							<input class="button" type="reset" value="Reset">
+							<input class="button" type="submit" value="Submit">
+						</div>
+					</form>
+				</section>
 				<div class="mapInfo">
-					<section class="contactInfo"></section>
-					<section id="map"></section>
+					<section class="contactInfo">
+						<p>Remember, sending advice to us is the best way to mold Alex + Keiths into the best Alex + Keiths you know and love. If you have any questions or concerns, please fill in the form below, submit it, and our dedicated tech team will reach out to you as soon as possible!</p>
+					</section>
+					<section id="map">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2838.7019358477496!2d-63.572020852239135!3d44.64400858950158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b5a2224d1deec4b%3A0x2982ce0dc30d3b16!2sAlexander%20Keith&#39;s!5e0!3m2!1sen!2sca!4v1586669082572!5m2!1sen!2sca" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					</section>
 				</div>
 			</div>
 			<div class="smallContacts">
-				<section class="contactInfoSmall"></section>
-				<section id="mapSmall"></section>
+				<section class="contactInfoSmall hidden">
+					<p>Sending advice to us is the best way to mold us into a better Alex + Keiths. If you have any questions or concerns fill in the form below, and our team will be back to you as soon as possible!</p>
+				</section>
+				<section id="mapSmall">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2838.7019358477496!2d-63.572020852239135!3d44.64400858950158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b5a2224d1deec4b%3A0x2982ce0dc30d3b16!2sAlexander%20Keith&#39;s!5e0!3m2!1sen!2sca!4v1586669082572!5m2!1sen!2sca" class="hidden" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+				</section>
 			</div>
-			<div class="contactFormWide"></div>
+			<section class="contactFormWide hidden">
+				<h2>Contact Us!</h2>
+				<form action="form.php" method="post">
+					<label for="name">First Name:</label><br>
+					<input type="text" required id="name" name="fullName" placeholder="Enter Your  First Name"><br><br>
+					<label for="name">Last Name:</label><br>
+					<input type="text" required id="name" name="fullName" placeholder="Enter Your Last Name"><br><br>
+					<label for="name">Phone Number:</label><br>
+					<input type="number" required id="phone" name="phoneNumber" placeholder="Enter Your Phone Number"><br><br>
+					<label for="email">Email:</label><br>
+					<input type="email" required id="email" placeholder="Enter Your Email"><br><br>
+					<label for="comments">Comments:</label><br>
+					<textarea name="comments" id="comments"  placeholder="Leave Additional Comments Here"></textarea><br><br>
+					<div class="formButtons">
+						<input class="button" type="reset" value="Reset">
+						<input class="button" type="submit" value="Submit">
+					</div>
+				</form>
+			</section>
 		</main>
 		<!-- End Main -->
 		<!-- Start Footer -->
 		<footer>
-			<div id="footLogo"></div>
-			<div class="footNav"></div>
-			<div id="socials"></div>
+			<div id="logo">
+				<img src="images/AlexKeiths_Logo.svg">
+			</div>
+				<nav class="footNav">
+				<ul>
+					<li><a href="index.html">HOME</a></li>
+					<li><a href="beer.html">BEER</a></li>
+					<li><a href="about.html">ABOUT US</a></li>
+					<li><a href="products.html">PRODUCTS</a></li>
+					<li><a href="contact.html">CONTACT</a></li>
+				</ul>
+				<img src="images/wood-navBar.jpg">
+			</nav>
+			<div class="hidden" id="toTop">
+				<a href="contact.html"><span id="topSpan">Back To Top</span></a>
+			</div>
+			<div id="socials">
+				<ul id="socials">
+					<li><a href="http://www.youtube.com"><img id="youtubeIcon" src="images/youtube.jpg" alt="Youtube"></a></li>
+					<li><a href="http://www.facebook.com"><img id="facebookIcon" src="images/facebook.jpg" alt="Facebook"></a></li>
+					<li><a href="http://www.twitter.com"><img id="twitterIcon" src="images/twitter.jpg" alt="Twitter"></a></li>
+					<li><a href="http://www.instagram.com"><img id="instagramIcon" src="images/instagram.jpg" alt="Instagram"></a></li>
+				</ul>
+			</div>
 		</footer>
 		<!-- End Footer -->
 	</div>
